:issue: https://github.com/elastic/beats/issues/
:pull: https://github.com/elastic/beats/pull/

////////////////////////////////////////////////////////////
// Template, add newest changes here

=== Beats version HEAD
https://github.com/elastic/beats/compare/v1.1.0...master[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*


==== Bugfixes

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*


==== Added

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

==== Deprecated

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-1.1.1]]
=== Beats version 1.1.1
https://github.com/elastic/beats/compare/v1.1.0...v1.1.1[View commits]

==== Bugfixes

*Affecting all Beats*

- Fix logstash output loop hanging in infinite loop on too many output errors. {pull}944[944]
- Fix critical bug in filebeat and winlogbeat potentially dropping events. {pull}953[953]

[[release-notes-1.1.0]]
=== Beats version 1.1.0
https://github.com/elastic/beats/compare/v1.0.1...v1.1.0[View commits]

==== Bugfixes

*Affecting all Beats*

- Fix logging issue with file-based output where newlines could be misplaced
  during concurrent logging {pull}650[650]
- Reduce memory usage by having separate queue sizes for single events and bulk events. {pull}649[649] {issue}516[516]
- Set default bulk_max_size value to 2048 {pull}628[628]
- Fix logstash window size of 1 not increasing. {pull}598[598]

*Packetbeat*

- Fix the condition that determines whether the direction of the transaction is set to "outgoing". Packetbeat uses the
  direction field to determine which transactions to drop when dropping outgoing transactions. {pull}557[557]
- Allow PF_RING sniffer type to be configured using pf_ring or pfring {pull}671[671]

*Filebeat*

- Set spool_size default value to 2048 {pull}628[628]

==== Added
